fixed responsive issues

--- a/about.html
+++ b/about.html
@@ -165,25 +165,25 @@
         <div class="container-fluid">
             <div class="container mx-auto">
                 <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-2xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
-                    <div class="w-full xl:w-2/6 lg:w-2/6 lg:mr-5 xl:mr-5">
+                    <div class="w-full xl:w-2/6 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
                         <div class="relative">
                             <img class="w-full h-auto" src="images/product-2.jpg" alt="">
                             <span class="absolute bg-red-500 text-white px-3 py-0 rounded top-0 left-0">-29%</span>
                         </div>
                         <div class="flex justify-center items-center px-3">
                             <div class="flex justify-center items-center py-4">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-28 md:h-auto w-12 h-auto mr-2 cursor-pointer" src="images/product-2.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-28 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-3.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-28 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-4.jpg" alt="">
-                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-28 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-5.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mr-2 cursor-pointer" src="images/product-2.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-3.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-4.jpg" alt="">
+                                <img class="xl:w-24 xl:h-auto lg:w-16 lg:h-auto md:w-20 md:h-auto w-12 h-auto mx-2 cursor-pointer" src="images/product-5.jpg" alt="">
                             </div>
                         </div>
                     </div>
-                    <div class="w-full xl:w-2/6 lg:w-2/6 lg:ml-5 xl:ml-5">
+                    <div class="w-full xl:w-2/6 lg:w-2/6 lg:ml-5 xl:ml-5 md:w-2/3 mx-auto xl:mt-0 lg:mt-0 mt-10">
                         <div class="">
                             <div class="border-b border-gray-300 pb-5">
-                                <h1 class="">Glory fo the Snow</h1>
-                                <div class="flex justify-between max-w-md pt-4">
+                                <h1 class="text-xs md:text-md xl:text-md lg:text-md">Glory fo the Snow</h1>
+                                <div class="flex justify-between items-center max-w-md pt-4">
                                     <div class="">
                                         <i class="far fa-star text-red-400"></i>
                                         <i class="far fa-star text-red-400"></i>
@@ -192,31 +192,31 @@
                                         <i class="far fa-star text-gray-400"></i>
                                     </div>
                                     <div class="">
-                                        <p class="text-gray-700 ">32 Reviews</p>
+                                        <p class="text-gray-700 text-xs md:text-md xl:text-md lg:text-md">32 Reviews</p>
                                     </div>
-                                    <div class="border-l border-gray-400 pl-10">
-                                        <p class="text-gray-700">Add Your Reviews</p>
+                                    <div class="border-l border-gray-400 xl:pl-10 lg:pl-10 pl-4">
+                                        <p class="text-gray-700 text-xs md:text-md xl:text-md lg:text-md">Add Your Reviews</p>
                                     </div>
                                 </div>
-                                <h1 class="text-2xl pt-5 text-gray-800 font-bold pb-3">$260.00</h1>
-                                <p class="text-gray-600 pb-2">Available: <span class="text-red-400">In stock</span></p>
-                                <p class="text-gray-600">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                                <h1 class="text-sm xl:text-2xl lg:text-2xl md:text-2xl pt-5 text-gray-800 font-bold pb-3">$260.00</h1>
+                                <p class="text-gray-600 pb-2 text-xs md:text-md xl:text-md lg:text-md">Available: <span class="text-red-400 text-xs md:text-md xl:text-md lg:text-md">In stock</span></p>
+                                <p class="text-gray-600 text-xs md:text-md xl:text-md lg:text-md">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
                                 <div class="py-5">
                                     <div class="flex items-center">
-                                        <input class="h-4 w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1" for="protectionPlan"> Protection Plan: <span class="text-red-400">2 year $4.99</span></label>
+                                        <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
+                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Protection Plan: <span class="text-red-400">2 year $4.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
-                                        <input class="h-4 w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1" for="protectionPlan"> Remote Holder: <span class="text-red-400">$9.99</span></label>
+                                        <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
+                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Remote Holder: <span class="text-red-400">$9.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
-                                        <input class="h-4 w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1" for="protectionPlan">  Koral Alexa Voice Remote Case:  <span class="text-red-400">Red $16.99</span></label>
+                                        <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
+                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan">  Koral Alexa Voice Remote Case:  <span class="text-red-400 ">Red $16.99</span></label>
                                     </div>
                                      <div class=" flex items-center pt-1">
-                                        <input class="h-4 w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1" for="protectionPlan"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
+                                        <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
+                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
                                     </div>
                                 </div>
                             </div>
@@ -242,17 +242,17 @@
                                      </div>
                                </div>
                                <div class="py-5 leading-loose">
-                                  <p class="text-gray-600 text-sm leading-loose">Tags: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Birthday</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquets</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Custom Orders</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Home Decor</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Weddings</a></p>
-                                  <p class="text-gray-600 text-sm leading-loose">Categories: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquet</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Event</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">GIft</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Joy</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Love</a></p>
+                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-md lg:text-md">Categories: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Birthday</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquets</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Custom Orders</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Home Decor</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Weddings</a></p>
+                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-md lg:text-md">Tags: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquet</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Event</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">GIft</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Joy</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Love</a></p>
                                </div>
                                <div class="">
-                                  <a href="#" class="bg-blue-400 text-gray-100 px-4 border border-blue-400 py-2 rounded hover:bg-transparent hover:text-blue-400 hover:border hover:border-blue-400 transition duration-300 ease-in-out"> <button><i class="fab fa-twitter"></i> Tweet</button></a>
+                                <a href="#" class="bg-blue-400 text-gray-100 px-4 border border-blue-400 py-2 rounded hover:bg-transparent hover:text-blue-400 hover:border hover:border-blue-400 transition duration-300 ease-in-out"> <button class="mb-5"><i class="fab fa-twitter"></i> Tweet</button></a>
 
-                                  <a href="#" class="bg-blue-600 text-gray-100 px-2 border border-blue-600 py-2 rounded hover:bg-transparent hover:text-blue-600 hover:border hover:border-blue-600 transition duration-300 ease-in-out"> <button><i class="fab fa-facebook-f"></i> Share</button></a>
+                                  <a href="#" class="mx-1 bg-blue-600 text-gray-100 px-2 border border-blue-600 py-2 rounded hover:bg-transparent hover:text-blue-600 hover:border hover:border-blue-600 transition duration-300 ease-in-out"> <button><i class="fab fa-facebook-f"></i> Share</button></a>
                                   
-                                  <a href="#" class="bg-red-400 text-gray-100 px-4 border border-red-400 py-2 rounded hover:bg-transparent hover:text-red-400 hover:border hover:border-red-400 transition duration-300 ease-in-out"> <button><i class="fab fa-google-plus"></i> Google+</button></a>
+                                  <a href="#" class="mr-1 bg-red-400 text-gray-100 px-2 border border-red-400 py-2 rounded hover:bg-transparent hover:text-red-400 hover:border hover:border-red-400 transition duration-300 ease-in-out"> <button><i class="fab fa-google-plus"></i> Google+</button></a>
 
-                                  <a href="#" class="bg-red-600 text-gray-100 px-4 border border-red-600 py-2 rounded hover:bg-transparent hover:text-red-600 hover:border hover:border-red-600 transition duration-300 ease-in-out"> <button><i class="fab fa-pinterest-p"></i> Tweet</button></a>
+                                  <a href="#" class="bg-red-600 text-gray-100 px-2 border border-red-600 py-2 rounded hover:bg-transparent hover:text-red-600 hover:border hover:border-red-600 transition duration-300 ease-in-out"> <button><i class="fab fa-pinterest-p"></i> Tweet</button></a>
                                </div>
                         </div>
                     </div>
