--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none focus:shadow-outline"
-                        href="about.html"
+                        href="#"
                     >
                         Blog
                     </a>
@@ -437,7 +437,7 @@
                         <div class="w-full" id="content1">
                             <div class="cart-list">
                                 <div class="">
-                                    <a href="#" class="relative">
+                                    <a href="about.html" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-4.jpg" alt="" />
                                         <span class="discount-title">-30%</span>
                                     </a>
@@ -465,7 +465,7 @@
 
                             <div class="cart-list">
                                 <div class="">
-                                    <a href="#" class="relative">
+                                    <a href="about.html" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-2.jpg" alt="" />
                                         <span class="discount-title">-30%</span>
                                     </a>
@@ -493,7 +493,7 @@
 
                             <div class="cart-list">
                                 <div class="">
-                                    <a href="#" class="relative">
+                                    <a href="about.html" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-3.jpg" alt="" />
                                         <span class="discount-title">-30%</span>
                                     </a>
@@ -521,7 +521,7 @@
 
                             <div class="cart-list">
                                 <div class="">
-                                    <a href="#" class="relative">
+                                    <a href="about.html" class="relative">
                                         <img class="h-auto max-w-4xl" src="images/product-4.jpg" alt="" />
                                         <span class="discount-title">-30%</span>
                                     </a>
@@ -551,7 +551,7 @@
                             <div class="">
                                 <div class="prod-cart-header">
                                     <div class="prod-single-cart">
-                                        <a href="#" class="relative"> <img class="w-full" src="images/product-1.jpg" alt="" />
+                                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-1.jpg" alt="" />
                                         <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span>
                                     </a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
@@ -571,7 +571,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
+                                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
                                             <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
@@ -590,7 +590,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -609,7 +609,7 @@
                                     </div>
 
                                     <div class="prod-single-cart">
-                                        <a href="#" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" />
+                                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" />
                                          <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
@@ -628,7 +628,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-1.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-1.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -646,7 +646,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
+                                        <a href="about.html" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
                                             <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
@@ -665,7 +665,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -684,7 +684,7 @@
                                     </div>
 
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-4.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-4.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -702,7 +702,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-1.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-1.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -721,7 +721,7 @@
                                     </div>
 
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-2.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-2.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -739,7 +739,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-3.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -757,7 +757,7 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-4.jpg" alt="" /></a>
+                                        <a href="about.html" class=""> <img class="w-full" src="images/product-4.jpg" alt="" /></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
