fixed tabs issues

--- a/about.html
+++ b/about.html
@@ -164,8 +164,8 @@
 
         <div class="container-fluid">
             <div class="container mx-auto">
-                <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-2xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
-                    <div class="w-full xl:w-2/6 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
+                <div class="pt-44 max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto lg:flex lg:justify-center xl:flex xl:justify-center">
+                    <div class="w-full xl:w-2/5 lg:w-2/6 md:w-2/3 lg:mr-5 xl:mr-5 mx-auto">
                         <div class="relative">
                             <img class="w-full h-auto" src="images/product-2.jpg" alt="">
                             <span class="absolute bg-red-500 text-white px-3 py-0 rounded top-0 left-0">-29%</span>
@@ -179,7 +179,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="w-full xl:w-2/6 lg:w-2/6 lg:ml-5 xl:ml-5 md:w-2/3 mx-auto xl:mt-0 lg:mt-0 mt-10">
+                    <div class="w-full xl:w-2/5 lg:w-2/6 lg:ml-5 xl:ml-5 md:w-2/3 mx-auto xl:mt-0 lg:mt-0 mt-10">
                         <div class="">
                             <div class="border-b border-gray-300 pb-5">
                                 <h1 class="text-xs md:text-md xl:text-md lg:text-md">Glory fo the Snow</h1>
@@ -192,31 +192,31 @@
                                         <i class="far fa-star text-gray-400"></i>
                                     </div>
                                     <div class="">
-                                        <p class="text-gray-700 text-xs md:text-md xl:text-md lg:text-md">32 Reviews</p>
+                                        <p class="text-gray-700 text-xs md:text-md xl:text-base lg:text-base">32 Reviews</p>
                                     </div>
                                     <div class="border-l border-gray-400 xl:pl-10 lg:pl-10 pl-4">
-                                        <p class="text-gray-700 text-xs md:text-md xl:text-md lg:text-md">Add Your Reviews</p>
+                                        <p class="text-gray-700 text-xs md:text-md xl:text-base lg:text-base">Add Your Reviews</p>
                                     </div>
                                 </div>
                                 <h1 class="text-sm xl:text-2xl lg:text-2xl md:text-2xl pt-5 text-gray-800 font-bold pb-3">$260.00</h1>
-                                <p class="text-gray-600 pb-2 text-xs md:text-md xl:text-md lg:text-md">Available: <span class="text-red-400 text-xs md:text-md xl:text-md lg:text-md">In stock</span></p>
-                                <p class="text-gray-600 text-xs md:text-md xl:text-md lg:text-md">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
+                                <p class="text-gray-600 pb-2 text-xs md:text-md xl:text-base lg:text-base">Available: <span class="text-red-400 text-xs md:text-md xl:text-lg lg:text-lg">In stock</span></p>
+                                <p class="text-gray-600 text-xs md:text-md xl:text-base lg:text-base">Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum.</p>
                                 <div class="py-5">
                                     <div class="flex items-center">
                                         <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Protection Plan: <span class="text-red-400">2 year $4.99</span></label>
+                                        <label class="pt-1 text-xs md:text-md xl:text-base lg:text-base" for="protectionPlan"> Protection Plan: <span class="text-red-400">2 year $4.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
                                         <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Remote Holder: <span class="text-red-400">$9.99</span></label>
+                                        <label class="pt-1 text-xs md:text-md xl:text-base lg:text-base" for="protectionPlan"> Remote Holder: <span class="text-red-400">$9.99</span></label>
                                     </div>
                                     <div class="flex items-center pt-1">
                                         <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan">  Koral Alexa Voice Remote Case:  <span class="text-red-400 ">Red $16.99</span></label>
+                                        <label class="pt-1 text-xs md:text-md xl:text-base lg:text-base" for="protectionPlan">  Koral Alexa Voice Remote Case:  <span class="text-red-400 ">Red $16.99</span></label>
                                     </div>
                                      <div class=" flex items-center pt-1">
                                         <input class="h-3 h-3 xl:h-4 xl:w-4 xl:h-4 lg:w-4 xl:h-4 md:w-4 mr-2" type="checkbox" id="protectionPlan" />
-                                        <label class="pt-1 text-xs md:text-md xl:text-md lg:text-md" for="protectionPlan"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
+                                        <label class="pt-1 text-xs md:text-md xl:text-base lg:text-base" for="protectionPlan"> Amazon Basics HD Antenna: <span class="text-red-400"> 25 Mile $14.99</span></label>
                                     </div>
                                 </div>
                             </div>
@@ -242,8 +242,8 @@
                                      </div>
                                </div>
                                <div class="py-5 leading-loose">
-                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-md lg:text-md">Categories: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Birthday</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquets</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Custom Orders</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Home Decor</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Weddings</a></p>
-                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-md lg:text-md">Tags: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquet</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Event</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">GIft</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Joy</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Love</a></p>
+                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-base lg:text-base">Categories: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Birthday</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquets</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Custom Orders</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Home Decor</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Weddings</a></p>
+                                  <p class="text-gray-600 text-xs leading-loose text-xs md:text-md xl:text-base lg:text-base">Tags: <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Bouquet</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Event</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">GIft</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Joy</a>, <a href="#" class="hover:text-red-600 transition duration-300 ease-in-out">Love</a></p>
                                </div>
                                <div class="">
                                 <a href="#" class="bg-blue-400 text-gray-100 px-4 border border-blue-400 py-2 rounded hover:bg-transparent hover:text-blue-400 hover:border hover:border-blue-400 transition duration-300 ease-in-out"> <button class="mb-5"><i class="fab fa-twitter"></i> Tweet</button></a>
@@ -258,6 +258,37 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="container mx-auto mt-20">
+            <div class="max-w-xs md:max-w-2xl lg:max-w-screen-xl xl:max-w-screen-xl mx-auto mt-4 rounded">
+                <!-- Tabs -->
+                <ul id="tabs" class="lg:flex lg:justify-center lg:items-center xl:flex xl:justify-center xl:items-center w-full text-center bg-gray-900">
+                  <li class="px-4 py-3 -mb-px font-semibold text-gray-100 rounded-t opacity-50 w-full uppercase"><a id="default-tab" href="#first">Description</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#second">Reviews</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#third">shipping</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#fourth">shipping Policy</a></li>
+                  <li class="px-4 py-3 font-semibold text-gray-100 opacity-50 w-full uppercase"><a href="#fifth">size chart</a></li>
+                </ul>
+
+                <!-- Tab Contents -->
+                <div id="tab-contents">
+                  <div id="first" class="p-4">
+                    First tab
+                  </div>
+                  <div id="second" class="hidden p-4">
+                    Second tab
+                  </div>
+                  <div id="third" class="hidden p-4">
+                    Third tab
+                  </div>
+                  <div id="fourth" class="hidden p-4">
+                    Fourth tab
+                  </div>
+                  <div id="fifth" class="hidden p-4">
+                    fifth tab
+                  </div>
+                </div>
+              </div>
         </div>
 
         <div class="container-fluid bg-gray-100 py-20 mt-20 dark:bg-gray-800 border-t border-gray-100 dark:border-t dark:border-gray-600">
@@ -492,5 +523,35 @@
       btn.addEventListener("click", increment);
     });
   </script>
+           <script>
+            let tabsContainer = document.querySelector("#tabs");
+
+                let tabTogglers = tabsContainer.querySelectorAll("a");
+                console.log(tabTogglers);
+
+                tabTogglers.forEach(function(toggler) {
+                toggler.addEventListener("click", function(e) {
+                e.preventDefault();
+
+                let tabName = this.getAttribute("href");
+
+                let tabContents = document.querySelector("#tab-contents");
+
+                for (let i = 0; i < tabContents.children.length; i++) {
+
+                tabTogglers[i].parentElement.classList.remove("opacity-100", "bg-red-500");  tabContents.children[i].classList.remove("hidden");
+                if ("#" + tabContents.children[i].id === tabName) {
+                continue;
+                }
+                tabContents.children[i].classList.add("hidden");
+
+                }
+                e.target.parentElement.classList.add("-mb-px", "opacity-100", "bg-red-500");
+                });
+                });
+
+                document.getElementById("default-tab").click();
+
+        </script>
     </body>
 </html>
